<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TheMovieDBGeekKotlin</string>
    <string name="age_rating_default">13+</string>
    <string name="back_label">Back</string>
    <string name="cast">Cast</string>
    <string name="date_release">2020-05-25</string>
    <string name="error">Error</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="image_of_actor_or_actress">image of actor or actress</string>
    <string name="image_like">image of like icon</string>
    <string name="image_of_main_poster">image of main poster</string>
    <string name="movie_duration">137 min</string>
    <string name="movie_genres_card">Action, Adventure, Drama</string>
    <string name="movie_list">Movie List</string>
    <string name="movie_details">Movie Details</string>
    <string name="movie_title">Avengers: \nEnd Game</string>
    <string name="movie_genres">Action, Adventure, Fantasy</string>
    <string name="movie_reviews">125 Reviews</string>
    <string name="movie_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="popup_clear_all">Отменить фильтр</string>
    <string name="popup_title_share">Поделиться</string>
    <string name="popup_title_update_all">Обновить</string>
    <string name="reload">Reload</string>
    <string name="ratings">Ratings</string>
    <string name="storyline">Storyline</string>
    <string name="switcher_of_movies">Switcher of movies</string>
    <string name="toolbar_title_search">Поиск</string>
    <string name="type_movie">Now Playing</string>
    <string name="title">The Movie DB</string>
    <string name="settingsbar">Настройки</string>
    <string name="adult">Adult</string>
    <string name="en">en</string>
    <string name="notes_title">Заметка</string>
    <string name="notes_edit">Заметка</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="location_required_error">Location services must be enabled for geofence</string>
    <string name="geofences_added">Geofence added</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_entered">Geofence entered.</string>
    <string name="channel_name">GeofenceStatus</string>

    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">You found a movie theater <xliff:g id="geofence_location">%1$s</xliff:g>.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofences_not_removed">Geofences not removed.</string>
    <string name="now_playing_movie_reminder">Обновился список фильмов Now Playing</string>
    <string name="message_subscribed">Подписаны на тему</string>
    <string name="message_subscribe_failed">Ошибка подписки на тему</string>
    <string name="channel_now_playing">Now Playing</string>

</resources>