<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_clear_filter"
        android:orderInCategory="100"
        android:title="@string/popup_clear_all"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/popup_title_share"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_update_all"
        android:orderInCategory="100"
        android:title="@string/popup_title_update_all"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="5"
        android:title="@string/toolbar_title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"

        app:showAsAction="ifRoom" />
</menu>