<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

        <ImageView
            android:id="@+id/imgTitlePoster"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:contentDescription="@string/image_of_main_poster"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_avengers_background" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@+id/imgTitlePoster"
            app:layout_constraintEnd_toEndOf="@+id/imgTitlePoster"
            app:layout_constraintStart_toStartOf="@+id/imgTitlePoster"
            app:layout_constraintTop_toTopOf="@+id/imgTitlePoster" />

        <Button
            android:id="@+id/toolbar"
            style="@style/ToolbarButtonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/back_label"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAgeRating"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginBottom="@dimen/view_big_gap"
            android:text="@string/age_rating_default"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="13+" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextMainHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:text="@string/movie_title"
            app:layout_constraintBottom_toBottomOf="@+id/imgTitlePoster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgTitlePoster"
            tools:text="Avengers: \nEnd Game" />

        <!--text shadow-->
        <!--android:shadowColor="@color/accent"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="5"-->

        <TextView
            android:id="@+id/tvGenres"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:text="@string/movie_genres"
            android:textColor="@color/accent"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="4"
            android:theme="@style/RatingBarStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGenres" />

        <TextView
            android:id="@+id/tvReviews"
            style="@style/ReviewTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_medium_gap"
            android:layout_marginBottom="@dimen/view_medium_gap"
            android:paddingStart="12dp"
            android:text="@string/movie_reviews"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/tvGenres"
            tools:ignore="RtlSymmetry"
            tools:text="125 Reviews" />

        <TextView
            android:id="@+id/tvStoryline"
            style="@style/TextHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginTop="@dimen/view_big_gap"
            android:text="@string/storyline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReviews" />

        <TextView
            android:id="@+id/tvStorylineText"
            style="@style/TextRegularStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginEnd="@dimen/layout_gap"
            android:lineSpacingExtra="4dp"
            android:paddingTop="@dimen/view_medium_gap"
            android:paddingBottom="@dimen/view_medium_gap"
            android:text="@string/movie_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStoryline" />

        <TextView
            android:id="@+id/tvCast"
            style="@style/TextHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginTop="@dimen/view_big_gap"
            android:text="@string/cast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStorylineText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_big_gap"
            android:layout_marginEnd="@dimen/view_big_gap"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCast"
            tools:itemCount="2"
            tools:listitem="@layout/view_holder_actor" />

        <TextView
            android:id="@+id/tvNotes"
            style="@style/TextHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginTop="@dimen/view_medium_gap"
            android:text="@string/notes_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <EditText
            android:id="@+id/notesMovie"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/notes_edit"
            style="@style/TextHeaderStyle"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNotes"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>