<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/text_under_image"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/searchBar">

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/settingsbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <CheckBox
        android:id="@+id/checkAdult"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center|top"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/adult"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="144dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/titleBar"
        >

    </CheckBox>

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_gravity="end|top"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/en"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        tools:layout_editor_absoluteX="254dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/checkAdult"
        >

    </EditText>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/ic_search_page"
        tools:layout_editor_absoluteX="323dp"
        tools:layout_editor_absoluteY="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/editTextSearch"
        />

</androidx.constraintlayout.widget.ConstraintLayout>